bad/assign_var_string_class.example_compiler_output
ERROR
[1mbad/assign_var_string_class.lat:7:4: [1;31merror: [0;1massigning to `string` from incompatible type `Y`[m
	x = new Y;
	  [1;32m^[m
